Change from arraylists to arraydeques